--- a/_includes/case.html
+++ b/_includes/case.html
@@ -4,16 +4,14 @@
 {% assign previous = site.data.work[work_index].cases[previous_index] %}
 
 <nav>
-  <ul>
+  <ul class="gallery">
       <li><a href="{{ site.baseurl }}{{ previous.url }}"><i class="fas fa-chevron-circle-left"></i></a></li>
       <li><a href="{{ site.baseurl }}{{ current.url }}"><i class="fas fa-chevron-circle-up"></i></a></li>
       <li><a href="{{ site.baseurl }}{{ next.url }}"><i class="fas fa-chevron-circle-right"></i></a></li>
   </ul>
 </nav>
-
-
 </div>
-<div class="pure-u-1 pure-u-md-2-3 prem">
+<div class="pure-u-1 pure-u-md-2-3 p1rem">
 
 {% if page.title != null %}
 <h1>{{page.title}}</h1>
@@ -21,7 +19,7 @@
 </div>
 </div>
 <div class="pure-g">
-<div class="pure-u-1 pure-u-md-1-3 prem">
+<div class="pure-u-1 pure-u-md-1-3 p1rem">
 
 <h4>Metadata</h4>
 
@@ -40,7 +38,7 @@
 {% endfor %}
 </ul>
 </div>
-<div class="pure-u-1 pure-u-md-2-3 prem">
+<div class="pure-u-1 pure-u-md-2-3 p1rem">
 <img src="{{ case.image }}" alt="{{ case.alt_text }}" class="pure-img" />
 
 <h3>Challenge</h3>
