--- a/_layouts/case.html
+++ b/_layouts/case.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="pure-g"><div class="pure-u-1 pure-u-md-1-3 prem">
+<div class="pure-g"><div class="pure-u-1 pure-u-md-1-3 p1rem">
 {% include header.html %}
 {{ content }}
 </div></div>
