--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,13 +2,13 @@
 layout: default
 ---
 <div class="pure-g">
-<div class="pure-u-1 prem">
+<div class="pure-u-1 p1rem">
 {% include header.html %}
 </div>
 </div>
 
 {{ content }}
 
-<div class="pure-g"><div class="pure-u-1 prem">
+<div class="pure-g"><div class="pure-u-1 p1rem">
 {% include footer.html %}
 </div></div>
