--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="pure-g"><div class="pure-u-1 pure-u-md-1-3 prem">
+<div class="pure-g"><div class="pure-u-1 pure-u-md-1-3 p1rem">
 {% include header.html %}
 <nav>
   <ul>
@@ -12,7 +12,7 @@ layout: default
     {% endfor %}
   </ul>
 </nav>
-</div><div class="pure-u-1 pure-u-md-2-3 prem">
+</div><div class="pure-u-1 pure-u-md-2-3 p1rem">
 {% if page.title != null %}
 <h1>{{page.title}}</h1>
 {% endif%}
