--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,19 +1,21 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-<link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,700|Playfair+Display:900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="{{ '/css/pure/base-min.css' | prepend: site.baseurl }}">
-<link rel="stylesheet" href="{{ '/css/pure/grids-min.css' | prepend: site.baseurl }}">
-<link rel="stylesheet" href="{{ '/css/pure/grids-responsive-min.css' | prepend: site.baseurl }}">
-<link rel="stylesheet" href="{{ '/css/jdk20v1.css' | prepend: site.baseurl }}">
+
+<link rel="stylesheet" href="{{ '/css/raster.css' | prepend: site.baseurl }}">
+
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
+<script src="https://kit.fontawesome.com/3789fe5ab2.js" crossorigin="anonymous"></script>
 
+</head>
 {% comment %}
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}">
+
 <meta property="og:url" content="https://jdkunesh.com/" />
 <meta property="og:title" content="Jason Kunesh is okay." />
 <meta property="og:description" content="" />
@@ -43,7 +45,9 @@
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 
+<link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,700|Playfair+Display:900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="{{ '/css/pure/base-min.css' | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ '/css/pure/grids-min.css' | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ '/css/pure/grids-responsive-min.css' | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ '/css/jdk20v1.css' | prepend: site.baseurl }}">
 {% endcomment %}
-<script src="https://kit.fontawesome.com/3789fe5ab2.js" crossorigin="anonymous"></script>
-
-</head>
