--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,11 @@
 ---
 layout: default
 ---
-<div class="pure-g"><div class="pure-u-1 pure-u-md-1-3 p1rem">
+
 {% include header.html %}
+<grid columns="8">
+<c></c>
+<c span="2">
 <nav>
   <ul>
     {% for item in site.data.navigation.primary %}
@@ -12,12 +15,29 @@ layout: default
     {% endfor %}
   </ul>
 </nav>
-</div><div class="pure-u-1 pure-u-md-2-3 p1rem">
+</c>
+<c span="3-5">
 {% if page.title != null %}
-<h1>{{page.title}}</h1>
+<h2>{{page.title}}</h2>
 {% endif%}
 {{ content }}
-</div></div>
-<div class="pure-g"><div class="pure-u-1">
+</c>
+<c></c>
+<c></c>
+<c></c>
+</grid>
+
+<grid columns="8">
+<c span=""></c>
+<c span=""></c>
+<c span=""></c>
+<c span=""></c>
+<c span=""></c>
+<c span=""></c>
+<c span=""></c>
+<c span=""></c>
+<c></c>
+<c></c>
+</grid>
+
 {% include footer.html %}
-</div></div>
