--- a/_includes/case.html
+++ b/_includes/case.html
@@ -3,6 +3,7 @@
 {% assign next = site.data.work[work_index].cases[next_index] %}
 {% assign previous = site.data.work[work_index].cases[previous_index] %}
 
+<c span="2">
 <nav>
   <ul class="gallery">
       <li><a href="{{ site.baseurl }}{{ previous.url }}"><i class="fas fa-chevron-circle-left"></i></a></li>
@@ -10,13 +11,27 @@
       <li><a href="{{ site.baseurl }}{{ next.url }}"><i class="fas fa-chevron-circle-right"></i></a></li>
   </ul>
 </nav>
-
-
+</c>
+<c span="3-5">
 {% if page.title != null %}
-<h1>{{page.title}}</h1>
+<h2>{{page.title}}</h2>
 {% endif%}
+{{ content }}
+</c>
+<c></c>
+<c></c>
+<c></c>
+</grid>
 
+<grid columns="8">
+<c span="row">
+<img src="{{ case.image }}" alt="{{ case.alt_text }}" />
 
+</c>
+</grid>
+
+<grid columns="8">
+<c span="2">
 <h4>Metadata</h4>
 
 <h2>{{case.team }}</h2>
@@ -33,9 +48,22 @@
 <li>{{ tag }}</li>
 {% endfor %}
 </ul>
+</c>
+<c span=""></c>
+<c span=""></c>
+<c span=""></c>
+<c span=""></c>
+<c span=""></c>
+<c span=""></c>
+<c span=""></c>
+<c></c>
+<c></c>
+</grid>
 
 
-<img src="{{ case.image }}" alt="{{ case.alt_text }}" class="pure-img" />
+
+
+
 
 <h3>Challenge</h3>
 {% for thing in case.challenge.media %}
