--- a/css/jdk20v1.scss
+++ b/css/jdk20v1.scss
@@ -4,172 +4,176 @@
 # 
 ---
 @charset "utf-8";
-// reset box model for css3 grid
-* { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
-//== Typography
-$font-family-sans-serif:  'Nunito', sans-serif !default;
-$font-family-serif:       'Lora', serif !default;
-$font-family-base:        $font-family-sans-serif !default;
-$font-family-statement:   'Playfair Display', serif !default;
+c img {height:auto; width:auto;}
 
-//** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
-$font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
 
-//== unused???
-$font-size-base: 17px;
-$font-size-small:  $font-size-base * 0.875;
-$font-weight-base: 400;
-$line-height-base: 1.5;
-
-$headings-font-weight:    700 !default;
-$headings-line-height:    1.1 !default;
-$blockquote-font-size: $font-size-base;
+// // reset box model for css3 grid
+// * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: // border-box; }
+// 
+// //== Typography
+// $font-family-sans-serif:  'Nunito', sans-serif !default;
+// $font-family-serif:       'Lora', serif !default;
+// $font-family-base:        $font-family-sans-serif !default;
+// $font-family-statement:   'Playfair Display', serif !default;
+// 
+// //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
+// $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
+// 
+// //== unused???
+// $font-size-base: 17px;
+// $font-size-small:  $font-size-base * 0.875;
+// $font-weight-base: 400;
+// $line-height-base: 1.5;
+// 
+// $headings-font-weight:    700 !default;
+// $headings-line-height:    1.1 !default;
+// $blockquote-font-size: $font-size-base;
 
 //== COLOR
-$primary-color:              #2ae !default;    // aqua-ish?
-$secondary-color:            #562800 !default; // old text brown
-$another-primary-color:      #2C5491 !default; // close enough to the primary?
-
-$black:                      #000000 !default;
-$blue:                       #0d6efd !default;
-$indigo:                     #6610f2 !default;
-$purple:                     #4C2C92 !default;
-$pink:                       #d63384 !default;
-$red:                        #dc3545 !default;
-$orange:                     #fd7e14 !default;
-$yellow:                     #ffc107 !default;
-$green:                      #28a745 !default;
-$teal:                       #20c997 !default;
-$cyan:                       #17a2b8 !default;
-$white:                      #ffffff !default;
-$offwhite:                   #FFF4F4 !default;
-
-$grey:                       #494440;
-$grey-light:                 #E4E2E0;
-$grey-dark:                  #494440;
-
-$brand-color:                $primary-color;
-
-// FUNCTIONAL COLORS (WHERE STYLE MEETS SEMANTICS)
-$background-color:           $offwhite;
-$text-color:                 $secondary-color;
-
-$color-link:                 $another-primary-color;
-$color-active:               $teal;
-$color-hover:                $orange;
-$color-focus:                $cyan;
-$color-visited:              $purple;
+// $primary-color:              #2ae !default;    // aqua-ish?
+// $secondary-color:            #562800 !default; // old text brown
+// $another-primary-color:      #2C5491 !default; // close enough to the primary?
+// 
+// $black:                      #000000 !default;
+// $blue:                       #0d6efd !default;
+// $indigo:                     #6610f2 !default;
+// $purple:                     #4C2C92 !default;
+// $pink:                       #d63384 !default;
+// $red:                        #dc3545 !default;
+// $orange:                     #fd7e14 !default;
+// $yellow:                     #ffc107 !default;
+// $green:                      #28a745 !default;
+// $teal:                       #20c997 !default;
+// $cyan:                       #17a2b8 !default;
+// $white:                      #ffffff !default;
+// $offwhite:                   #FFF4F4 !default;
+// 
+// $grey:                       #494440;
+// $grey-light:                 #E4E2E0;
+// $grey-dark:                  #494440;
+// 
+// $brand-color:                $primary-color;
+// 
+// // FUNCTIONAL COLORS (WHERE STYLE MEETS SEMANTICS)
+// $background-color:           $offwhite;
+// $text-color:                 $secondary-color;
+// 
+// $color-link:                 $another-primary-color;
+// $color-active:               $teal;
+// $color-hover:                $orange;
+// $color-focus:                $cyan;
+// $color-visited:              $purple;
 
 //== TOP LEVEL ELEMENTS
 
-body {
-    background-color: $background-color;
-}
-
-a {
-    color: $color-link;
-    text-decoration: none;
-
-    &:visited {
-        color: $color-visited;
-    }
-
-    &:focus {
-        color: $color-focus;
-        text-decoration: underline;
-    }
-    &:hover {
-        color: $color-hover;
-        text-decoration: underline;
-    }
-    &:active {
-        color: $color-active;
-        text-decoration: underline;
-    }
-}
-
-h1, h2, h3, h4, h5, h6 {
-    color: $grey-dark;
-    font-family: $font-family-sans-serif;
-    font-weight: $headings-font-weight;
-    line-height: $headings-line-height;
-}
-
-h1 {
-    font-family: $font-family-statement;
-    font-size: 2em;
-    font-style: normal;
-   font-weight: 900;
- }
-
-h2 { font-size: 1.5em; }
-h3 { font-size: 1.17em; }
-h4 { font-size: 1em; }
-h5 { font-size: 0.83em; }
-h6 { font-size: 0.75em; }
-
-header a h1 {
-    color: $color-link;
-    text-decoration: none;
-
-    &:visited {
-        color: $color-link;
-    }
-
-    &:focus {
-        color: $color-focus;
-        text-decoration: none;
-    }
-    &:hover {
-        color: $color-hover;
-        text-decoration: underline;
-    }
-    &:active {
-        color: $color-active;
-        text-decoration: none;
-    }
-}
-
-nav ul.gallery li {
-    float: left;
-}
-
-ul {
-    list-style: none;
-    text-align: center;
-    padding:0;
-    margin:0;
-}
-
-li {
-    margin:0;
-    padding: 0 1em 0 0;
-    text-align: left;
-    text-decoration: none;
-}
-
-p, li {
-    color: $text-color;
-    font-family: $font-family-sans-serif;
-    font-weight: $font-weight-base;
-    line-height: $line-height-base;
-
-}
-
-//* LAYOUT TIME
-
-.p1rem {
-    padding: 1rem;
-}
-.p2em {
-    padding: 2em;
-}
-
-.card {
-    
-}
-
+// body {
+//     background-color: $background-color;
+// }
+// 
+// a {
+//     color: $color-link;
+//     text-decoration: none;
+// 
+//     &:visited {
+//         color: $color-visited;
+//     }
+// 
+//     &:focus {
+//         color: $color-focus;
+//         text-decoration: underline;
+//     }
+//     &:hover {
+//         color: $color-hover;
+//         text-decoration: underline;
+//     }
+//     &:active {
+//         color: $color-active;
+//         text-decoration: underline;
+//     }
+// }
+// 
+// h1, h2, h3, h4, h5, h6 {
+//     color: $grey-dark;
+//     font-family: $font-family-sans-serif;
+//     font-weight: $headings-font-weight;
+//     line-height: $headings-line-height;
+// }
+// 
+// h1 {
+//     font-family: $font-family-statement;
+//     font-size: 2em;
+//     font-style: normal;
+//    font-weight: 900;
+//  }
+// 
+// h2 { font-size: 1.5em; }
+// h3 { font-size: 1.17em; }
+// h4 { font-size: 1em; }
+// h5 { font-size: 0.83em; }
+// h6 { font-size: 0.75em; }
+// 
+// header a h1 {
+//     color: $color-link;
+//     text-decoration: none;
+// 
+//     &:visited {
+//         color: $color-link;
+//     }
+// 
+//     &:focus {
+//         color: $color-focus;
+//         text-decoration: none;
+//     }
+//     &:hover {
+//         color: $color-hover;
+//         text-decoration: underline;
+//     }
+//     &:active {
+//         color: $color-active;
+//         text-decoration: none;
+//     }
+// }
+// 
+// nav ul.gallery li {
+//     float: left;
+// }
+// 
+// ul {
+//     list-style: none;
+//     text-align: center;
+//     padding:0;
+//     margin:0;
+// }
+// 
+// li {
+//     margin:0;
+//     padding: 0 1em 0 0;
+//     text-align: left;
+//     text-decoration: none;
+// }
+// 
+// p, li {
+//     color: $text-color;
+//     font-family: $font-family-sans-serif;
+//     font-weight: $font-weight-base;
+//     line-height: $line-height-base;
+// 
+// }
+// 
+// //* LAYOUT TIME
+// 
+// .p1rem {
+//     padding: 1rem;
+// }
+// .p2em {
+//     padding: 2em;
+// }
+// 
+// .card {
+//     
+// }
+// 
 //header ul li, footer ul li {float:left;}
 footer { text-align: center;}
 
