removed an extra file

--- a/css/jdk20v1.scss
+++ b/css/jdk20v1.scss
@@ -5,8 +5,7 @@
 ---
 @charset "utf-8";
 
-c img {height:auto; width:auto;}
-
+// div.card {height:5em; width:5em;}
 
 // // reset box model for css3 grid
 // * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: // border-box; }
