--- a/css/jdk20v1.scss
+++ b/css/jdk20v1.scss
@@ -5,7 +5,11 @@
 ---
 @charset "utf-8";
 
-// div.card {height:5em; width:5em;}
+.card img {
+    object-fit: cover;
+    width: 100%;
+    max-height:100%;
+}
 
 // // reset box model for css3 grid
 // * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: // border-box; }
