--- a/css/jdk20v1.scss
+++ b/css/jdk20v1.scss
@@ -6,9 +6,10 @@
 @charset "utf-8";
 
 .card img {
+    height:100%;
+    max-height:100%;
     object-fit: cover;
     width: 100%;
-    max-height:100%;
 }
 
 // // reset box model for css3 grid
