--- a/css/jdk20v1.scss
+++ b/css/jdk20v1.scss
@@ -12,6 +12,10 @@
     width: 100%;
 }
 
+img.dead {
+-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+}
 // // reset box model for css3 grid
 // * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: // border-box; }
 // 
