--- a/_includes/case.html
+++ b/_includes/case.html
@@ -58,7 +58,6 @@
 <li>{{ case.budget }}</li>
 <li>{{ case.project_timeframe }}</li>
 </ul>
-
 <ul>
 {% for tag in case.tags %}
 <li>{{ tag }}</li>
@@ -66,56 +65,62 @@
 </ul>
 </c>
 <c span="3-8">
+{% if case.description %}
+<h3>Description</h3>
+{{ case.description | markdownify }}
+{% endif %}
+</c>
+</grid>
+
+<grid columns="8">
+<c span="1-2"></c>
+<c span="3-8">
+{% if case.challenge %}
 <h3>Challenge</h3>
 {% for thing in case.challenge.media %}
 {% include media.html %}
 {% endfor %}
 {{ case.challenge.description | markdownify }}
+{% endif %}
 
+{% if case.research %}
 <h3>Research</h3>
 {% for thing in case.research.media %}
 {% include media.html %}
 {% endfor %}
 {{ case.research.description | markdownify }}
+{% endif %}
 
+{% if case.highlights %}
 <h3>Highlights</h3>
 {% for thing in case.highlights.media %}
 {% include media.html %}
 {% endfor %}
 {{ case.highlights.description | markdownify }}
+{% endif %}
 
+{% if case.validation %}
 <h3>Validation</h3>
 {% for thing in case.validation.media %}
 {% include media.html %}
 {% endfor %}
 {{ case.validation.description | markdownify }}
+{% endif %}
 
+{% if case.learnings %}
 <h3>Learnings</h3>
 {% for thing in case.learnings.media %}
 {% include media.html %}
 {% endfor %}
 {{ case.learnings.description | markdownify }}
+{% endif %}
 
+{% if case.results %}
 <h3>Results</h3>
 {% for thing in case.results.media %}
 {% include media.html %}
 {% endfor %}
 {{ case.results.description | markdownify }}
+{% endif %}
 </c>
 </grid>
-<!-- 
-
-<c span=""></c>
-<c span=""></c>
-<c span=""></c>
-<c span=""></c>
-<c span=""></c>
-<c span=""></c>
-<c></c>
-<c></c>
-
-
-
-
-
- -->
