--- a/_includes/case.html
+++ b/_includes/case.html
@@ -25,35 +25,34 @@
       <li><a href="{{ site.baseurl }}{{ next.url }}"><i class="fas fa-chevron-circle-right"></i></a></li>
   </ul>
 </nav>
-<grid columns="8">
+
+<grid columns="8" columns-s="1">
+<c></c>
+<c span="2-7">
+<h1>{% if case.title %}{{ case.title | escape }}{% elsif page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</h1>
+</c>
+<c></c>
+</grid>
+
+<grid columns="8" columns-s="1">
 <c span="row">
 <img src="{{ case.image }}" alt="{{ case.alt_text }}" />
 </c>
 </grid>
 
-<grid columns="8">
+<grid columns="8" columns-s="1">
 <c></c>
-<c span="2">
-</c>
-<c span="3-5">
-{% if case.title %}{{ case.title | escape }}{% elsif page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}
-{% if page.title != null %}
-<h2>{{page.title}}</h2>
-{% endif%}
-</c>
-<c></c>
-<c></c>
-<c></c>
-</grid>
-
-<grid columns="8">
-<c span="1-2">
-<h4>Metadata</h4>
-
+<c span="2-5">
 <h2>{{case.team }}</h2>
+{% if case.description %}
+{{ case.description | markdownify }}
+{% endif %}
+
+</c>
+<c span="6-7">
+<h4>Metadata</h4>
 <p>{{ case.role }}</p>
 <p>{{ case.role_timeframe }}</p>
-
 <ul>
 <li>{{ case.budget }}</li>
 <li>{{ case.project_timeframe }}</li>
@@ -64,17 +63,13 @@
 {% endfor %}
 </ul>
 </c>
-<c span="3-8">
-{% if case.description %}
-<h3>Description</h3>
-{{ case.description | markdownify }}
-{% endif %}
-</c>
+<c></c>
 </grid>
 
-<grid columns="8">
-<c span="1-2"></c>
-<c span="3-8">
+<grid columns="8" columns-s="1">
+<c></c>
+<c span="2-7">
+
 {% if case.challenge %}
 <h3>Challenge</h3>
 {% for thing in case.challenge.media %}
@@ -123,4 +118,5 @@
 {{ case.results.description | markdownify }}
 {% endif %}
 </c>
+<c></c>
 </grid>
