--- a/css/jdk20v1.scss
+++ b/css/jdk20v1.scss
@@ -5,12 +5,14 @@
 ---
 @charset "utf-8";
 
+/*
 .card img {
     height:100%;
     max-height:100%;
     object-fit: cover;
     width: 100%;
 }
+*/
 
 img.dead {
 -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
