new content for cds

--- a/_includes/case.html
+++ b/_includes/case.html
@@ -21,8 +21,8 @@
 
 <nav>
   <ul class="gallery">
-      <li><a href="{{ site.baseurl }}{{ previous.url }}"><i class="fas fa-chevron-circle-left"></i></a></li>
-      <li><a href="{{ site.baseurl }}{{ next.url }}"><i class="fas fa-chevron-circle-right"></i></a></li>
+      <li><a href="{{ site.baseurl }}{{ previous.url }}"><i class="fas fa-chevron-circle-left fa-3x"></i></a></li>
+      <li><a href="{{ site.baseurl }}{{ next.url }}"><i class="fas fa-chevron-circle-right fa-3x"></i></a></li>
   </ul>
 </nav>
 
