all images done for chicago design system, for now

--- a/css/jdk20v1.scss
+++ b/css/jdk20v1.scss
@@ -60,7 +60,7 @@ $grey-dark:                  #494440;
 $brand-color:                $primary-color;
 
 // FUNCTIONAL COLORS (WHERE STYLE MEETS SEMANTICS)
-$background-color:           $offwhite;
+$background-color:           $white;
 $text-color:                 $secondary-color;
 
 $color-link:                 $another-primary-color;
