--- a/_includes/case.html
+++ b/_includes/case.html
@@ -38,33 +38,35 @@
 </c>
 <c span="2-6">
 <h1>{% if case.title %}{{ case.title | escape }}{% elsif page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</h1>
-
-{% if case.description %}
-<h3>Brief</h3>
-{{ case.description | markdownify }}
-{% endif %}
 {% if case.challenge %}
-<h3>Challenge</h3>
+<h3>Brief</h3>
 {% for thing in case.challenge.media %}
 {% include media.html %}
 {% endfor %}
 {{ case.challenge.description | markdownify }}
 {% endif %}
+
+{% assign counter = 0 %}
+
+<p>
+{% for tag in case.tags %}
+{% assign counter = counter | plus: 1 %}
+{{ tag }}{% if case.tags.size != counter %},{% endif %}
+{% endfor %}
+</p>
+
 </c>
 <c span="7-8">
 <img src="{{ case.logo }}" alt="{{ case.alt_text }}" class="w-12 top" />
 <h4>{{case.team }}</h4>
+{% if case.description %}
+{{ case.description | markdownify }}
+{% endif %}
 <p>{{ case.role }}</p>
-<h4>Details</h4>
+<h4>Budget & Time</h4>
 <ul>
-<li>budget {{ case.budget }}</li>
-<li>timeline {{ case.project_timeframe }}</li>
-<li>involvement {{ case.role_timeframe }}</li>
-</ul>
-<ul>
-{% for tag in case.tags %}
-<li>{{ tag }}</li>
-{% endfor %}
+<li>{{ case.budget }}</li>
+<li>{{ case.project_timeframe }}</li>
 </ul>
 </c>
 <c></c>
