--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,16 @@
+
+
+<grid columns="8" columns-s="1">
+<c span="1-2">
+<nav>
+  <ul class="gallery">
+      <li><a href="#top"><i class="fas fa-chevron-circle-up fa-3x"></i></a></li>
+  </ul>
+</nav>
+</c>
+<c span="3-8">
+</c>
+</grid>
 <footer>
 <nav>
 <ul>
