--- a/css/jdk20v1.scss
+++ b/css/jdk20v1.scss
@@ -34,6 +34,13 @@ nav ul li {
 //  padding: 0 1em 0 0;
  }
 
+grid > c > a > img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  max-width: 100%;
+}
+
+
 //== COLOR
 $primary-color:              #2ae !default;    // aqua-ish?
 $secondary-color:            #562800 !default; // old text brown
