cleaning up grids, overall feel

--- a/css/jdk20v1.scss
+++ b/css/jdk20v1.scss
@@ -1,9 +1,22 @@
 ---
 #
-# This file contains overrides to the pure.css framework v1.01 https://purecss.io/
+# This file contains overrides to the raster.css framework v1.01 https://rsms.me/raster/
 # 
 ---
 @charset "utf-8";
+
+:root {
+  /*
+  Font size is the basis of all other measurements.
+  It's either constant or viewport-relative. Choose one.
+
+  Constant: */
+  --fontSize: 18px;
+  /*
+
+  Veiwport-relative (100% / EMs-across-viewport) */
+  /*--fontSize: calc(100vw / 80);*/
+}
 
 /*
 .card img {
