--- a/_includes/case.html
+++ b/_includes/case.html
@@ -1,5 +1,4 @@
 {% assign case = site.data.work[case_index]%}
-<!-- assume case is good -->
 
 {% assign previous_index = site.data.work[case_index].id | minus:1 %}
 {% if prev_ovr_index %}
@@ -19,8 +18,8 @@
 {% assign previous = site.data.work[previous_index] %}
 {% assign next = site.data.work[next_index] %}
 
-<grid columns="8" columns-s="1">
-<c span="1-2">
+<grid columns="8" columns-s="1"class="debug">
+<c span="1-2" span-s="row">
 <nav>
   <ul class="gallery">
       <li><a href="{{ site.baseurl }}{{ previous.url }}"><i class="fas fa-chevron-circle-left fa-3x"></i></a></li>
@@ -28,22 +27,19 @@
   </ul>
 </nav>
 </c>
-<c span="3-8">
+<c span="3..">
 </c>
-</grid>
-
-
-<grid columns="8" columns-s="1">
-<c span="row">
+<c span="row" span-s="row">
 <img src="{{ case.image }}" alt="{{ case.alt_text }}" class="w-full"/>
 </c>
-</grid>
-
-<grid columns="8" columns-s="1">
 <c>
 </c>
-<c span="2-6">
+<c span="2.." span-s="row">
 <h1>{% if case.title %}{{ case.title | escape }}{% elsif page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</h1>
+</c>
+<c>
+</c>
+<c span="2-5" span-s="row">
 {% if case.challenge %}
 <h3>Brief</h3>
 {% for thing in case.challenge.media %}
@@ -62,26 +58,21 @@
 </p>
 
 </c>
-<c span="7-8">
-<h4>{{case.team }}</h4>
+<c span="6-8" span-s="row">
 <img src="{{ case.logo }}" alt="{{ case.alt_text }}" class="w-12 fill" />
+<h4>{{case.team }}</h4>
 {% if case.description %}
 {{ case.description | markdownify }}
 {% endif %}
-<p>{{ case.role }}</p>
+<p>{{ case.role }}{% if case.role_timeframe %}, {{ case.role_timeframe }}{% endif %}</p>
 <h4>Budget & Time</h4>
 <ul>
 <li>{{ case.budget }}</li>
 <li>{{ case.project_timeframe }}</li>
-{% if case.role_timeframe %}<li>{{ case.role_timeframe }} <i>personally</i></li>{% endif %}
 </ul>
 </c>
 <c></c>
-</grid>
-
-<grid columns="8" columns-s="1">
-<c></c>
-<c span="2-7">
+<c span="2-7" span-s="row">
 {% if case.research %}
 <h3>Research</h3>
 {{ case.research.description | markdownify }}
