--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <header>
-    <a href="{{ site.baseurl }}/"><h1 class="xlarge">{{ site.title }}</h1></a>
+    <a href="{{ site.baseurl }}/"><h1 class="large">{{ site.title }}</h1></a>
 </header>
 <hr>
