cleaning up the look a bit

--- a/_includes/case.html
+++ b/_includes/case.html
@@ -18,7 +18,7 @@
 {% assign previous = site.data.work[previous_index] %}
 {% assign next = site.data.work[next_index] %}
 
-<grid columns="8" columns-s="1"class="debug">
+<grid columns="8" columns-s="1">
 <c span="1-2" span-s="row">
 <nav>
   <ul class="gallery">
