--- a/css/jdk20v1.scss
+++ b/css/jdk20v1.scss
@@ -84,7 +84,7 @@ $background-color:           $white;
 $text-color:                 $secondary-color;
 
 $color-link:                 $another-primary-color;
-$color-active:               $teal;
+$color-active:               $indigo;
 $color-hover:                $orange;
 $color-focus:                $cyan;
 $color-visited:              $purple;
@@ -118,11 +118,11 @@ a {
 }
 
 header a h1 {
-    color: $color-link;
+    color: $color-hover;
     text-decoration: none;
 
     &:visited {
-        color: $color-link;
+        color: $color-hover;
     }
 
     &:focus {
@@ -138,6 +138,29 @@ header a h1 {
         text-decoration: none;
     }
 }
+
+nav > ul > li > a {
+    color: $grey-light;
+    text-decoration: none;
+
+    &:visited {
+        color: $grey-light;
+    }
+
+    &:focus {
+        color: $color-focus;
+        text-decoration: none;
+    }
+    &:hover {
+        color: $color-hover;
+        text-decoration: none;
+    }
+    &:active {
+        color: $color-active;
+        text-decoration: none;
+    }
+}
+
 // // reset box model for css3 grid
 // * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: // border-box; }
 // 
