--- a/css/jdk20v1.scss
+++ b/css/jdk20v1.scss
@@ -18,15 +18,6 @@
   /*--fontSize: calc(100vw / 80);*/
 }
 
-/*
-.card img {
-    height:100%;
-    max-height:100%;
-    object-fit: cover;
-    width: 100%;
-}
-*/
-
 img.dead {
 -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
@@ -41,6 +32,14 @@ nav ul {
 
 nav ul li {
     float: left;
+    text-align: left;
+    text-decoration: none;
+//    margin:0;
+//  padding: 0 1em 0 0;
+ }
+
+footer nav ul li {
+    float: none;
     text-align: left;
     text-decoration: none;
 //    margin:0;
