minor header fix

--- a/_includes/case.html
+++ b/_includes/case.html
@@ -30,7 +30,7 @@
 <c span="3..">
 </c>
 <c span="row" span-s="row">
-<img src="{{ case.image }}" alt="{{ case.alt_text }}" class="w-full h-18"/>
+<img src="{{ case.image }}" alt="{{ case.alt_text }}" class="h-18"/>
 </c>
 <c>
 </c>
