--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,9 +11,8 @@ layout: default
 <h1>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</h1>
 </c>
 <c span="1-2"></c>
-<c span="3-6" span-s="row">
+<c span="3-.." span-s="row">
 {{ content }}
 </c>
-<c span="7-8"></c>
 </grid>
 {% include footer.html %}
