--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,19 +28,20 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
-<script src="https://kit.fontawesome.com/3789fe5ab2.js" crossorigin="anonymous"></script>
-</head>
-{% comment %}
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}">
 
 <meta property="og:url" content="https://jdkunesh.com/" />
-<meta property="og:title" content="Jason Kunesh is okay." />
-<meta property="og:description" content="" />
-<meta property="og:image" content="" />
+<meta property="og:title" content="Jason Kunesh is a designer in Chicago, IL." />
+<meta property="og:description" content="The personal site and work portfolio of Jason Kunesh." />
+<meta property="og:image" content="/img/sunrise-over-lake-michigan-fbtw.jpg" />
 <!-- 1200x 628-900 (linked image 628, fb image 900, highlighted image 717) 2.7:1 or 16:9 event -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Chicago Design System" />
+<meta name="twitter:title" content="Jason Kunesh is a designer in Chicago, IL." />
 <meta property="twitter:description" content="The Chicago Design System is the public visual identity of the City of Chicago. It is an inclusive, equitable, cost saving system for City communication and for Chicagoans to show their civic pride." />
-<meta property="twitter:image" content="https://design.chicago.gov/assets/img/logo/LOGO-Chicago2000x1000-TW.png" />
+<meta property="twitter:image" content="https://jdkunesh.com/img/sunrise-over-lake-michigan-fbtw.jpg" />
 <!-- 1024 x 512 2:1/16:9 -->
+<script src="https://kit.fontawesome.com/3789fe5ab2.js" crossorigin="anonymous"></script>
+</head>
+{% comment %}
+
 {% endcomment %}
