updated with a few head items

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,4 +41,44 @@
 <meta property="twitter:image" content="https://jdkunesh.com/img/sunrise-over-lake-michigan-fbtw.jpg" />
 <!-- 1024 x 512 2:1/16:9 -->
 <script src="https://kit.fontawesome.com/3789fe5ab2.js" crossorigin="anonymous"></script>
+
+{% comment %}
+
+<!-- Facebook -->
+<meta property="og:url" content="https://www.popupmagazine.com/">
+<meta property="og:publisher" content="130813763754">
+<meta property="og:title" content="Pop-Up Magazine">
+<meta property="og:description" content="A live magazine, created for a stage, a screen, and a live audience.">
+<meta property="og:image" content="https://www.popupmagazine.com/images/social/card-winter2020.jpg">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="photo">
+<meta name="twitter:site" content="@popupmag">
+<meta name="twitter:title" content="Pop-Up Magazine">
+<meta name="twitter:image" content="https://www.popupmagazine.com/images/social/card-winter2020.jpg">
+<meta name="twitter:url" content="https://www.popupmagazine.com/">
+
+<!-- Add to homescreen for Chrome on Android -->
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="application-name" content="Pop-Up Magazine">
+<link rel="icon" sizes="32x32" href="/images/icons/icon-32x32.png">
+<link rel="icon" sizes="192x192" href="/images/icons/chrome-touch-icon-192x192.png">
+
+<link rel="shortcut icon" sizes="16x16" href="/images/icons/favicon.ico">
+<link rel="shortcut icon" sizes="32x32" href="/images/icons/icon-32x32.png">
+
+<!-- Add to homescreen for Safari on iOS -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="Pop-Up Magazine">
+<link rel="apple-touch-icon" href="/images/icons/apple-touch-icon.png">
+
+<!-- Tile icon for Win8 (144x144 + tile color) -->
+<meta name="msapplication-TileImage" content="/images/icons/ms-touch-icon-144x144-precomposed.png">
+<meta name="msapplication-TileColor" content="#FFC900">
+
+<!-- Color the status bar on Android -->
+<meta name="theme-color" content="#FFC900">
+{% endcomment %}
+
 </head>
