updated description and rendering thereof

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,15 +30,15 @@
 <meta name="theme-color" content="#ffffff">
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}">
 
-<meta property="og:url" content="https://jdkunesh.com/" />
-<meta property="og:title" content="Jason Kunesh is a designer in Chicago, IL." />
-<meta property="og:description" content="The personal site and work portfolio of Jason Kunesh." />
-<meta property="og:image" content="/img/sunrise-over-lake-michigan-fbtw.jpg" />
+<meta property="og:url" content="{{ site.url }}" />
+<meta property="og:title" content="{{ site.title }}" />
+<meta property="og:description" content="{{ site.description }}" />
+<meta property="og:image" content="{{ site.image_social }}" />
 <!-- 1200x 628-900 (linked image 628, fb image 900, highlighted image 717) 2.7:1 or 16:9 event -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Jason Kunesh is a designer in Chicago, IL." />
-<meta property="twitter:description" content="The personal site and work portfolio of Jason Kunesh." />
-<meta property="twitter:image" content="https://jdkunesh.com/img/sunrise-over-lake-michigan-fbtw.jpg" />
+<meta name="twitter:title" content="{{ site.title }}" />
+<meta property="twitter:description" content="{{ site.description }}" />
+<meta property="twitter:image" content="{{ site.image_social }}" />
 <!-- 1024 x 512 2:1/16:9 -->
 <script src="https://kit.fontawesome.com/3789fe5ab2.js" crossorigin="anonymous"></script>
 
